[GTK] Fix two more memory leaks in DRT https://bugs.webkit.org/show_bug.cgi?id=88255

Patch by Sudarsana Nagineni <sudarsana.nagineni@linux.intel.com> on 2012-06-05
Reviewed by Martin Robinson.

Fixed memory leaks in GTK's DRT code.

* DumpRenderTree/gtk/DumpRenderTree.cpp:
(dumpHistoryItem): webkit_web_history_item_get_target() returns a
g_strdup()'d string. So, use GOwnPtr to manage memory automatically.
* DumpRenderTree/gtk/PixelDumpSupportGtk.cpp:
(createBitmapContextFromWebView): Free the cairo surface.

Canonical link: https://commits.webkit.org/106159@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119495 268f45cc-cd09-0410-ab3c-d52691b4dbfc